// Copyright 2024-2025 CardinalHQ, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package graphpb;

option go_package = "github.com/cardinalhq/oteltools/pkg/graph/graphpb";

// BaseObject contains common metadata for Kubernetes objects.
message BaseObject {
  string id = 1;
  string api_version = 2;
  string kind = 3;
  string name = 4;
  string uid = 5;
  string resource_version = 6;
  string namespace = 7;
  map<string, string> labels = 8;
  map<string, string> annotations = 9;
  repeated OwnerRef owner_ref = 10;
}

// OwnerRef describes an owning object.
message OwnerRef {
  string api_version = 1;
  string kind = 2;
  string name = 3;
  bool controller = 4;
}
